[package]
authors = ["PatWie <mail@patwie.com>"]
description = "A pure Rust implementation of the Robot Operating System (ROS) core."
license = "MIT"
name = "ros-core-rs"
readme = "README.md"
repository = "https://github.com/patwie/ros-core-rs"
homepage = "https://github.com/patwie/ros-core-rs"
version = "0.2.2"
edition = "2021"
keywords = ["ros", "rosrust", "roscore", "robotics"]
categories = ["science::robotics"]

[dependencies]
dxr = { path = "../dxr/dxr" }
dxr_server = { path = "../dxr/dxr_server", features = ["axum", "multicall"] }
dxr_client = { path = "../dxr/dxr_client", default-features = false, features = ["reqwest", "rustls-tls"] }
anyhow = "1.0.69"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"
paste = "1.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
url = "2.3.1"
maplit = "1.0.2"
futures = "0.3.30"

[dev-dependencies]
rosrust = "0.9"
rosrust_msg = "0.1"
doc-comment = "0.3.3"
tokio = { version = "1", features = ["signal"]}
tokio-util = "0.7.8"

[features]
doctest = []
